# nrl-consumer-api

./: .gitignore  .tool-versions  Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: continuous-integration.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-smoke-tests.yml
postman/: national-record-locator-consumer -sandbox.postman_collection.json  national_record_locator_consumer_sandbox.json
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: AssignMessage.AddCors.xml  AssignMessage.Errors.CatchAllMessage.xml  AssignMessage.OAuthPolicyErrorResponse.xml  Javascript.AddConnectionMetadataHeader.xml  Javascript.AddNrlAppIdHeader.xml  RaiseFault.403MissingNRLAppID.xml  ServiceCallout.CallHealthcheckEndpoint.xml  javascript.WritePathToVariable.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/policies/: AssignMessage.AddCors.xml  AssignMessage.AddCorsPreflight.xml  AssignMessage.AddSandboxAuthorization.xml  AssignMessage.Errors.CatchAllMessage.xml  RaiseFault.400MissingODSHeader.xml  (+5 more)
sandbox/: app.js  app.spec.js  index.js  package-lock.json  package.json
specification/: nrl-consumer-api.yaml
specification/record-locator/: consumer.yaml
tests/: api_tests.py  common_tests.py  sandbox_smoke_tests.py  sandbox_smoke_tests.py_  smoke_tests.py  smoke_tests.py_  test_endpoints.py
(+10 files in other folders)
