[project]
name = "nrl-consumer-api"

[tool.poetry]
name = "nrl-consumer-api"
version = "0.0.1-alpha"
description = ""
authors = []
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/nrl-consumer-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/national-record-locator-fhir/v3/consumer"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pytest-nhsd-apim = "^3.3.15"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^22.12.0"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.5"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"
pytest = "^8.2.0"
coverage = "^5.5"
aiohttp = "^3.10.2"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]
